changed event to workflow_dispatch

--- a/.github/workflows/docker-image-scan.yml
+++ b/.github/workflows/docker-image-scan.yml
@@ -1,16 +1,13 @@
 name: Local docker image scan
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
 
   local-clair-scan-debian:
     name: Local Clair Scan for Debian
-  
+
     env:
       DOCKER_TAG: theironbank:debian-latest
       CLAIR_REPORT: local-debian-clair-report
@@ -20,7 +17,7 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-    
+
     - name: Build the Docker image
       run: docker build . --file debian/Dockerfile --tag ${DOCKER_TAG}
 
@@ -37,14 +34,14 @@ jobs:
       with:
         name: ${{env.CLAIR_REPORT}}
         path: ${{env.CLAIR_REPORT}}.json
-        
+
     - name: Publish Scan Report
       uses: benauca/publish-clair-report@main
       with:
         report_paths: '${{env.CLAIR_REPORT}}.json'
         severity_level: 'Unknown'
         check_name: Report -> '${{env.CLAIR_REPORT}}'
-        
+
   local-clair-scan-alpine:
     name: Local Clair Scan for Alpine
     needs: local-clair-scan-debian
@@ -57,7 +54,7 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-    
+
     - name: Build the Docker image
       run: docker build . --file alpine/Dockerfile --tag ${DOCKER_TAG}
 
@@ -74,7 +71,7 @@ jobs:
       with:
         name: ${{env.CLAIR_REPORT}}
         path: ${{env.CLAIR_REPORT}}.json
-        
+
     - name: Publish Scan Report
       uses: benauca/publish-clair-report@main
       with:
@@ -94,7 +91,7 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-    
+
     - name: Build the Docker image
       run: docker build . --file ubuntu/Dockerfile --tag ${DOCKER_TAG}
 
@@ -112,14 +109,14 @@ jobs:
       with:
         name: ${{env.CLAIR_REPORT}}
         path: ${{env.CLAIR_REPORT}}.json
-        
+
     - name: Publish Scan Report
       uses: benauca/publish-clair-report@main
       with:
         report_paths: '${{env.CLAIR_REPORT}}.json'
         severity_level: 'Unknown'
         check_name: Report -> '${{env.CLAIR_REPORT}}'
-        
+
   local-clair-scan-rhel:
     name: Local Clair Scan for rhel
     needs: local-clair-scan-ubuntu
@@ -132,7 +129,7 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-    
+
     - name: Build the Docker image
       run: docker build . --file rhel/Dockerfile --tag ${DOCKER_TAG}
 
@@ -150,7 +147,7 @@ jobs:
       with:
         name: ${{env.CLAIR_REPORT}}
         path: ${{env.CLAIR_REPORT}}.json
-        
+
     - name: Publish Scan Report
       uses: benauca/publish-clair-report@main
       with:
@@ -160,7 +157,7 @@ jobs:
 
   remote-clair-scan-debian:
     name: Remote Clair Scan for Debian
-  
+
     env:
       DOCKER_TAG: vulnerables/web-dvwa
       CLAIR_REPORT: remote-debian-clair-report
@@ -170,7 +167,7 @@ jobs:
     steps:
     - name: Docker login
       run: docker login -u ${{secrets.DOCKER_USR}} -p ${{secrets.DOCKER_TKN}}
-      
+
     - name: Execute Clair scan
       uses: santander-group/clair-scan-action@fix/input-sanitization
       with:
@@ -185,14 +182,14 @@ jobs:
       with:
         name: ${{env.CLAIR_REPORT}}
         path: ${{env.CLAIR_REPORT}}.json
-        
+
     - name: Publish Scan Report
       uses: benauca/publish-clair-report@main
       with:
         report_paths: ${{env.CLAIR_REPORT}}.json
         severity_level: 'Unknown'
         check_name: Report -> '${{env.CLAIR_REPORT}}'
-        
+
   remote-clair-scan-alpine:
     name: Remote Clair Scan for Alpine
     needs: remote-clair-scan-debian
@@ -205,7 +202,7 @@ jobs:
     steps:
     - name: Docker login
       run: docker login -u ${{secrets.DOCKER_USR}} -p ${{secrets.DOCKER_TKN}}
-      
+
     - name: Execute Clair scan
       uses: santander-group/clair-scan-action@fix/input-sanitization
       with:
@@ -220,7 +217,7 @@ jobs:
       with:
         name: ${{env.CLAIR_REPORT}}
         path: ${{env.CLAIR_REPORT}}.json
-        
+
     - name: Publish Scan Report
       uses: benauca/publish-clair-report@main
       with:
@@ -240,7 +237,7 @@ jobs:
     steps:
     - name: Docker login
       run: docker login -u ${{secrets.DOCKER_USR}} -p ${{secrets.DOCKER_TKN}}
-      
+
     - name: Execute Clair scan
       uses: santander-group/clair-scan-action@fix/input-sanitization
       with:
@@ -256,7 +253,7 @@ jobs:
       with:
         name: ${{env.CLAIR_REPORT}}
         path: ${{env.CLAIR_REPORT}}.json
-        
+
     - name: Publish Scan Report
       uses: benauca/publish-clair-report@main
       with:
@@ -290,7 +287,7 @@ jobs:
       with:
         name: ${{env.CLAIR_REPORT}}
         path: ${{env.CLAIR_REPORT}}.json
-        
+
     - name: Publish Scan Report
       uses: benauca/publish-clair-report@main
       with:
